# context-engineering-workshop

./: .gitignore  README.md  SETUP.md  SETUP_WORKSHOP_BOA_PIP_ONLY.md  pyproject.toml  requirements.txt  test_openai_connection.py
demos/stage1_baseline_rag/: cli.py
demos/stage2_context_engineered/: cli.py
demos/stage3_full_agent_without_memory/: cli.py
demos/stage4_hybrid_search/: cli.py
demos/stage5_working_memory/: cli.py
demos/stage6_full_memory/: cli.py
docs/: AGENT_ARCHITECTURE_DIAGRAMS.md  reference-agent-usage-analysis.md
notebooks/: README.md  SETUP_GUIDE.md
notebooks/section-2-retrieved-context-engineering/: 01_rag_fundamentals_and_implementation.ipynb  02_crafting_and_optimizing_context.ipynb  README.md
notebooks/section-3-memory-systems/: README.md
progressive_agents/: README.md
progressive_agents/stage1_baseline_rag/: README.md
progressive_agents/stage2_context_engineered/: cli.py
progressive_agents/stage3_full_agent_without_memory/: cli.py
progressive_agents/stage3_full_agent_without_memory/agent/: nodes.py
progressive_agents/stage4_hybrid_search/: README.md  cli.py
progressive_agents/stage4_hybrid_search/agent/: react_agent.py
progressive_agents/stage4_hybrid_search_with_ner/: cli.py  test_linear_algebra.py  test_simple.py
progressive_agents/stage4_hybrid_search_with_ner/agent/: tools.py
progressive_agents/stage4_react_hybrid_search/agent/: setup.py
progressive_agents/stage5_memory_augmented/agent/: tools.py
progressive_agents/stage5_react_memory/: cli.py
progressive_agents/stage5_react_memory/agent/: react_parser.py  setup.py  tools.py
progressive_agents/stage5_working_memory/: README.md  cli.py
progressive_agents/stage5_working_memory/agent/: nodes.py
progressive_agents/stage6_full_memory/: README.md  cli.py
progressive_agents/stage6_full_memory/agent/: nodes.py
progressive_agents/stage6_longterm_memory/: cli.py  test_memory_tools.py
progressive_agents/stage6_longterm_memory/agent/: tools.py
progressive_agents/stage7_react_loop/: cli.py  test_agent_intents.py  test_linear_algebra.py  test_react_intents.py  test_react_linear_algebra.py  test_react_multi_turn.py  test_react_simple.py  test_simple.py  test_simple_memory.py
progressive_agents/stage7_react_loop/agent/: react_agent.py  react_parser.py  tools.py
workshop/: 01_introduction_to_context_engineering.ipynb  02_rag_essentials.ipynb  03_data_engineering.ipynb  03_progressive_agents_demo.ipynb  04_memory_systems.ipynb  README.md
